# kpidash

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lv_conf.h
.github/: copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/skills/pair-on-a-change/: SKILL.md
.specify/: init-options.json
.specify/memory/: constitution.md
clients/kpidash-client/: README.md  pyproject.toml
clients/kpidash-client/kpidash_client/: cli.py  config.py  daemon.py  redis_client.py  repos.py
clients/kpidash-client/kpidash_client/telemetry/: disk.py  gpu.py  system.py
clients/kpidash-client/systemd/: README.md  install.sh  kpidash-client.service.template
clients/kpidash-client/tests/: test_activity.py  test_config.py  test_redis_client.py  test_repos.py  test_service_status.py  test_telemetry.py
clients/kpidash-mcp/: README.md  pyproject.toml
clients/kpidash-mcp/kpidash_mcp/: redis_client.py  server.py  tools.py
clients/kpidash-mcp/tests/: test_tools.py
cmake/: aarch64-toolchain.cmake  gen_version.cmake
docs/: ARCHITECTURE.md  CLIENT-PROTOCOL.md  HANDOFF-CROSSCOMPILE.md  IMPLEMENTATION-PLAN.md
fonts/: generate.sh  lv_font_custom.h  lv_font_icons_56.c  lv_font_montserrat_bold_14.c  lv_font_montserrat_bold_16.c  lv_font_montserrat_bold_20.c  lv_font_montserrat_bold_24.c  lv_font_montserrat_bold_28.c  lv_font_montserrat_bold_36.c  lv_font_montserrat_bold_48.c
ops/rpi53/network-watchdog/: README.md  install.sh  kpidash-network-watchdog.service  kpidash-network-watchdog.sh  kpidash-network-watchdog.timer
ops/rpi53/persistent-journal/: README.md  install.sh
scripts/: deploy.sh  kpidash-cards  krpidss  load_test.py
specs/001-mvp-dashboard/: clarifications.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-mvp-dashboard/checklists/: requirements.md
specs/001-mvp-dashboard/contracts/: mcp-tools.md  redis-schema.md
specs/002-exploration-sprint/: data-model.md  plan.md  quickstart.md  research-fonts.md  research.md  spec.md  tasks.md
specs/002-exploration-sprint/checklists/: requirements.md
specs/002-exploration-sprint/contracts/: redis-schema.md
specs/003-refinement-sprint/: data-model.md  plan.md  preplan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-refinement-sprint/checklists/: requirements.md
specs/004-graph-row2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-graph-row2/checklists/: requirements.md
specs/005-fix-memory-leaks/: data-model.md  findings.md  plan.md  quickstart.md  research.md  soak-t0.txt  spec.md  tasks.md
specs/005-fix-memory-leaks/checklists/: requirements.md
specs/005-fix-memory-leaks/contracts/: redis-keys.md
specs/006-layout-refresh-status-cards/: data-model.md  final-report.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-layout-refresh-status-cards/checklists/: requirements.md
specs/006-layout-refresh-status-cards/contracts/: icon-registry.md  redis-dev-telemetry-host.md  redis-services.md
specs/007-tweak-svc-status/: spec.md  tasks.md
specs/008-device-screenshot/: spec.md
specs/008-refine-fortune/: peer-programming-log.md
specs/009-backlog-clear/: sprint.md
specs/011-device-screenshot/: spec.md
specs/012-backlog-ui/: sprint.md
specs/013-service-card-polish/: sprint.md
src/: bmp_write.c  bmp_write.h  config.c  config.h  fortune.c  fortune.h  icons.c  icons.h  layout.h  main.c  memstat.c  memstat.h  mockup_main.c  net.c  net.h  protocol.h  redis.c  redis.h  registry.c  registry.h  screenshot.c  screenshot.h  status.c  status.h  ui.c  ui.h
src/widgets/: activities.c  activities.h  apt_temps_card.c  apt_temps_card.h  client_card.c  client_card.h  common.h  dev_graph.c  dev_graph.h  dev_grid.c  dev_grid.h  dev_textsize.c  dev_textsize.h  fortune.c  fortune.h  gpu_graph.c  gpu_graph.h  repo_status.c  repo_status.h  service_card.c  service_card.h  status_bar.c  status_bar.h
tests/: CMakeLists.txt  test_config.c  test_graph_router.c  test_icon_registry.c  test_layout.c  test_layout_pool.c  test_redis_json.c  test_service_card.c  test_widget_leak.c
