[project]
name = "kpidash-client"
version = "1.0.0"
description = "kpidash client daemon and CLI for Linux and Windows"
requires-python = ">=3.11"
dependencies = [
    "psutil>=6",
    "pynvml>=11",
    "redis>=5",
    "GitPython>=3.1",
    "click>=8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
]

[project.scripts]
kpidash-client = "kpidash_client.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
