[project]
name = "kpidash-mcp"
version = "1.0.0"
description = "kpidash MCP server for AI agent activity reporting"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1",
    "redis>=5",
]

[project.scripts]
kpidash-mcp = "kpidash_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
